--- a/configs/config.yml
+++ b/configs/config.yml
@@ -1,21 +1,21 @@
 
 #ID del servidor
-serverId: "921445728189030401"
+serverId: "455476931463217174"
 
 #Token del bot
-token: "TOKEN"
+token: "OTg5MjQwMjI1NTU5NjI1Nzc4.GzlyGU.YJ12Pl4NirlCGfe6RTEC2Goc7gI9zKqD5NaJfY"
 
 announce:
 #Canal de anuncios en español
-  es: "1016023164754608188"
+  es: "736542255812444203"
 #Canal de anuncios en inglés
-  en: "1016023164754608188"
+  en: "971586635399561266"
 
 poll:
 #Canal de encuestas en español
-  es: "1016023164754608188"
+  es: "745488851904102450"
 #Canal de encuestas en inglés
-  en: "1016023164754608188"
+  en: "971586942280019998"
 
 lock_unlock:
 #Roles que se les quita/agrega permiso de hablar
@@ -25,13 +25,13 @@ lock_unlock:
 
 report:
 #Canal donde llegan los reportes
-  report_channel: "1016023164754608188"
+  report_channel: "1017973286988169236"
 #Canal donde llegan los reportes de bugs
-  reportbug_channel: "1016023164754608188"
+  reportbug_channel: "1017973370937167872"
 
 status:
 #API de la cual se obtienen los datos del estado
-  api: "https://api.mcsrvstat.us/2/IP_SERVIDOR"
+  api: "https://api.mcsrvstat.us/2/nasgar.online"
   offline: "El servidor está apagado"
 
 giveaways:
@@ -60,38 +60,38 @@ giveaways:
 sugerenciasEs:
 #Canal(es) de sugerencias en español
   channels:
-    - "101609980asd0405516399"
+    - "998734632369520640"
 #Canal donde se envian las sugerencias a revision
-  review_channel: "1016023164754608188"
+  review_channel: "998734876054392892"
 #Canal donde se envian las sugerencias aceptadas
-  accepted_channel: "1016023164754608188"
+  accepted_channel: "998734898229694504"
 #Reacciones
   reactions:
     up: "✅"
     down: "❌"
 #Cantidad de votos que debe tener la sugerencia antes de ser enviada a revisión
-  votes_until_review: 1
+  votes_until_review: 40
 
 sugerenciasEn:
 #Lo de arriba pero en inglés
   channels:
-    - "10160231asd64754608188"
-  review_channel: "1016023164754608188"
-  accepted_channel: "1016023164754608188"
+    - "998734664749568050"
+  review_channel: "998734876054392892"
+  accepted_channel: "998734898229694504"
   reactions:
     up: "✅"
     down: "❌"
-  votes_until_review: 1
+  votes_until_review: 40
 
 
 verificacion:
 #Rol ESPAÑOL
-  en_rol: "1002970865585094706"
+  en_rol: "971586129751076924"
 #Rol INGLÉS
-  es_rol: "1002970880802045983"
+  es_rol: "971586232175955969"
 #Rol(es) Verificado
   verified_roles:
-    - "949663853711622164"
+    - "745440633216303145"
 #Botones
   button_es:
     label: "Español"
@@ -114,25 +114,23 @@ verificacion:
 
 
 tickets_voice:
-#Rol del staff (se le daran permisos de unirse)
-  staffRolId: "1002970880802045983"
-#Categoria donde se crean los tickets de voz
+  #Rol del staff (se le daran permisos de unirse)
+  staffESRolId: "991931583219118121"
+  staffENRolId: "660260944882040853"
+  #Categoria donde se crean los tickets de voz
   parentId: "949663853669654549"
-#Limite de usuarios del canal de voz
+  #Limite de usuarios del canal de voz
   userlimit: 3
 
 commands:
   say:
-#Descripción del comando en español
-    es: "Haz que el bot diga lo que quieras."
-#Descripción del comando en inglés
-    en: "Make the bot say something"
-#Rol requerido para usar el comando
-    rol: "921445728189030401"
+    es: "Haz que el bot diga lo que quieras." #Descripción del comando en español
+    en: "Make the bot say something" #Descripción del comando en inglés
+    rol: "659579747528867840" #Rol requerido para usar el comando
   avatar:
     es: "Muestra tu avatar o el de otro usuario."
     en: "Shows your or another user 's avatar"
-    rol: "921445728189030401"
+    rol: "745440633216303145"
   addrole:
     es: "Agrega un rol a un usuario."
     en: "Adds a rol to an user"
@@ -140,19 +138,19 @@ commands:
   announce:
     es: "Envía un anuncio a ambos canales."
     en: "Sends an announce"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   info:
     es: "Muestra información del servidor."
     en: "Shows server info"
-    rol: "921445728189030401"
+    rol: "745440633216303145"
   ip:
     es: "Muestra la IP del servidor."
     en: "Shows server's ip"
-    rol: "921445728189030401"
+    rol: "745440633216303145"
   invite:
     es: "Muestra la invitación al discord."
     en: "Shows the discord invite"
-    rol: "921445728189030401"
+    rol: "745440633216303145"
   nick:
     es: "Modifica el nickname de un usuario."
     en: "Modifies the nickname of an user"
@@ -160,96 +158,96 @@ commands:
   num:
     es: "Selecciona un número al azar."
     en: "Selects a random number"
-    rol: "921445728189030401"
+    rol: "745440633216303145"
   removerole:
     es: "Remueve un rol de un usuario"
     en: "Removes a rol from an user"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   purge:
     es: "Elimina una cantidad de mensajes de un canal"
     en: "Deletes some messages on the channel"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   setdelay:
     es: "Establece el slowmode en un canal"
     en: "Set the slowmode time on a channel"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   flipcoin:
     es: "Obtiene un resultado aleatorio entre cara y cruz"
     en: "Face or cross"
-    rol: "921445728189030401"
+    rol: "745440633216303145"
   banlist:
     es: "Muestra la lista de baneos"
     en: "Shows ban list"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   lock:
     es: "Bloquea el canal a usuarios."
     en: "Lock the channel for normal users"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   unlock:
     es: "Des-Bloquea el canal a usuarios"
     en: "Unlock the channel for normal users"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   report:
     es: "Reporta a un usuario"
     en: "Report an user"
-    rol: "921445728189030401"
+    rol: "745440633216303145"
   reportbug:
     es: "Reporta un bug"
     en: "Alerts staffs about a bug"
-    rol: "921445728189030401"
+    rol: "745440633216303145"
   status:
     es: "Muestra los jugadores online en un servidor"
     en: "Shows the number of online players"
-    rol: "921445728189030401"
+    rol: "745440633216303145"
   ban:
     es: "Banea a un usuario"
     en: "Ban an user"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   unban:
     es: "Des-Banea a un usuario"
     en: "Unban an user"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   kick:
     es: "Kickea a un usuario del servidor"
     en: "Kick an user"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   mute:
     es: "Silencia a un usuario"
     en: "Mute an user"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   unmute:
     es: "Remueve el silencio de un usuario"
     en: "Unmute an user"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   giveaway_start:
     es: "Inicia un sorteo"
     en: "Starts a giveaway"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   giveaway_end:
     es: "Acaba un sorteo"
     en: "Forcibbly ends a giveaway"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   giveaway_reroll:
     es: "Elige nuevos ganadores para un sorteo"
     en: "Randomly choose new winners"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   accept:
     es: "Acepta una sugerencia"
     en: "Accept a suggestion"
-    rol: "921445728189030401"
+    rol: "659579740436299786"
   panel:
     es: "Mensajes de setup"
     en: "Setup messages"
-    rol: "921445728189030401"
+    rol: "659579740436299786"
   voice:
     es: "Crea un ticket de voz"
     en: "Create a new voice ticket"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   close_voice:
     es: "Cierra un ticket de voz"
     en: "Delete a voice ticket"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
   poll:
     es: "Crea una votacion"
     en: "Create a poll"
-    rol: "921445728189030401"
+    rol: "659579747528867840"
