fix: change token

--- a/configs/config.yml
+++ b/configs/config.yml
@@ -3,7 +3,7 @@
 serverId: "455476931463217174"
 
 #Token del bot
-token: "OTg5MjQwMjI1NTU5NjI1Nzc4.GzlyGU.YJ12Pl4NirlCGfe6RTEC2Goc7gI9zKqD5NaJfY"
+token: "OTg5MjQwMjI1NTU5NjI1Nzc4.GYrzB5.2axfmwkYGwFnoULvUEd1qUFuux-ZfinQI1y4dU"
 
 announce:
 #Canal de anuncios en español
