--- a/configs/messages.yml
+++ b/configs/messages.yml
@@ -19,13 +19,13 @@ announce:
   description: "Anuncios enviados"
   color: 16101959
 info:
-  description: "INFO:\nIP:...\nTIENDA:...\nDISCORD:...."
+  description: "INFO:\nIP: nasgar.online\nTIENDA: https://nasgar.online/shop\nDISCORD: https://ds.nasgar.online"
   color: 16101959
 ip:
-  description: "IP: ..."
+  description: "IP: nasgar.online"
   color: 16101959
 invite:
-  description: "INVITACIÓN: ..."
+  description: "INVITACIÓN: https://ds.nasgar.online"
   color: 16101959
 nick:
   description: "Nombre establecido a `%nick%`"
